# Revolt.c

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  install.bat
cmake/: Revolt.cConfig.cmake.in  revoltcConfig.cmake.in
doc/: api.md
ext/pstdint/: pstdint.h
include/revolt/: client.h  common.h  error.h  events.h  fetch.h  http.h  rest.h  revolt.h  websocket.h  ws.h
include/revolt/core/: common.h  defines.h  hash.h  http.h  json.h  types.h  util.h  websocket.h
include/revolt/data_models/: channel.h  emoji.h  file.h  message.h  models.h  server.h  user.h
lib/: client.c  error.c  fetch.c  http.c  rest.c  websocket.c  ws.c
lib/core/: http.c  json_cjson.c  json_yyjson.c  types_hashmap.c  types_lru_cache.c  util.c  websocket.c
lib/data_models/: channel.c  file.c  user.c
playground/: CMakeLists.txt  main.c
tools/: build_all.sh
